# FA-Labs

./: .gitignore
Pack_1/Task_1/: CMakeLists.txt  functions.c  functions.h  main  main.c  tests.txt
Pack_1/Task_2/: CMakeLists.txt  functions.c  functions.h  main.c
Pack_1/Task_3/: functions.c  functions.h  main.c
Pack_1/Task_5/: CMakeLists.txt  functions.c  functions.h  main.c
Pack_1/Task_8/: functions.c  functions.h  main.c
Pack_2/Task_1/: functions.c  functions.h  main.c
Pack_2/Task_2/: functions.c  functions.h  main.c
Pack_2/Task_3/: functions.c  functions.h
Pack_3/Task_1/: CMakeLists.txt  functions.c  functions.h  main.c
Pack_3/Task_6/: functions.c  functions.h  main.c
